[package]
name = "cosmora"
version = "0.1.0"
authors = ["Tristan Cottam <tristan@cott.am>"]
edition = "2021"
description = "Universal content management system based on RDF"
repository = "https://github.com/TristanCottam/cosmora"
license = "AGPL-3.0-or-later"
keywords = ["CMS", "RDF", "graph", "information", "knowledge"]
categories = ["database", "database-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
